--- a/Test2.html
+++ b/Test2.html
@@ -6,7 +6,7 @@
     <meta name="author" content="取名字是个问题">
     <title>Test2</title>
     <link rel="stylesheet" type = "text/css" href="style.css">
-    <link rel="icon" type="image/x-icon" href="../img/tp-head.ico">
+    <link rel="icon" type="image/x-icon" href="tp-head.ico">
 </head>
 <body>
     <form autocomplete="on" method="post" enctype="multipart/form-data">
