--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;url=http://8.130.35.180/">
+<meta http-equiv="refresh" content="0;url=http://57c2b860.r2.cpolar.top/modmake/main">
