--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;url=http://374a0fa1.r3.cpolar.top/modmake/main">
+<meta http-equiv="refresh" content="0;url=http://[2409:8a28:725b:a370:34de:15e2:b426:3f11]/image/see">
